--- a/wordpress/wp-content/themes/pro-populo-valdensis/src/css/elements/blocks/article-list.scss
+++ b/wordpress/wp-content/themes/pro-populo-valdensis/src/css/elements/blocks/article-list.scss
@@ -79,7 +79,7 @@
         width: 100%;
         display: flex;
         column-gap: 0.25rem;
-        justify-content: end;
+        justify-content: flex-end;
 
         li {
             margin: 0;
