--- a/wordpress/wp-content/themes/pro-populo-valdensis/src/css/elements/blocks/content-toggle.scss
+++ b/wordpress/wp-content/themes/pro-populo-valdensis/src/css/elements/blocks/content-toggle.scss
@@ -1,10 +1,11 @@
 .ppv-content-toggle {
     width: 100%;
-    border: 2px solid var(--ppv-red-120);
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     border-radius: 2px;
-    padding: 1rem;
-    background-color: var(--ppv-red);
     transition: 0.25s ease background-color;
+    margin-top: -2px;
+    @apply py-4;
 
     summary {
         .ppv-content-toggle-title {
@@ -14,8 +15,7 @@
 
         list-style: none;
         cursor: pointer;
-        color: white;
-        font-weight: 600;
+        color: black;
     }
 
     summary::-webkit-details-marker {
@@ -25,6 +25,7 @@
     .ppv-content-toggle-icon {
         height: fit-content;
         transition: 0.25s ease transform;
+        @apply text-ppv-red
     }
 
     &[open] {
